--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,12 @@
             <!--<version>2.2.4</version>-->
         <!--</dependency>-->
 
+        <dependency>
+            <groupId>org.codehaus.groovy</groupId>
+            <artifactId>groovy-all</artifactId>
+            <version>2.4.5</version>
+        </dependency>
+
     </dependencies>
     <build>
         <plugins>
