--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 
-spring.redis.host=10.1.64.181
+spring.redis.host=localhost
 spring.redis.port=6379
 
 
